# .claude

./: .credentials.json  .gitignore  .last-cleanup  .mcp.json  CLAUDE.md  evaluation_metrics_agentic_search.md  get_stock.README.md  get_stock.py  install-skills.md  mcp-needs-auth-cache.json  session-log.md  settings.json
meta-orchestrator/: .gitignore  BUILD-CHECKLIST.md  README.md  S2_APPARATUS_V2.2_LIMITATIONS.md  S2_WORKING_PROTOCOL.md  SEED_TASK.md  SPEC.md  STATUS_AND_QUESTIONS.md  pybughive_gate1_manifest.json  pybughive_report_cookiecutter.json  pybughive_report_cumulative.json  pybughive_report_freqtrade.json  pybughive_report_post_f2p_fix.json  pybughive_report_post_f2p_fix_v1.json  pybughive_report_small_pre_f2p_detector_fix.json  pyproject.toml  requirements.txt
meta-orchestrator/corpus/: D_AUTHORING_PROCESS.md  D_AUTHOR_PACKET.md  D_SUBMISSION_SCHEMA.json  EXPERIMENT_S2_DESIGN.md  EXPERIMENT_S2_SCOPE_AMENDMENT.md  F2P_DETECTION_SPEC.md  GATE1_DECISION.md  S2_AGENT_CONTRACT.md  S2_FOLD1_BLINDED_ANALYSIS_PLAN.md  S2_FOLD1_PILOT_FINAL_REPORT.md  S2_FOLD1_POSTHOC_DIAGNOSTIC_FINDINGS.md  S2_FOLD1_POSTHOC_DIAGNOSTIC_PLAN.md  S2_HELDOUT_EVAL_PROTOCOL.md  S2_PILOT_HANDOFF_MANIFEST.json  S2_PILOT_HANDOFF_MANIFEST.sha256  S2_PILOT_READINESS_REPORT.txt  S2_PILOT_RUNBOOK.md  S2_PREPAID_FREEZE.md  S2_REPRODUCTION_ENVELOPE.md  S2_RESEARCH_CLOSEOUT.md  S2_SOLVER_HARNESS_REPORT.txt  S2_V22_FINAL_CLOSEOUT.md  V3_COST_AND_POWER_PLAN.md  V3_DESIGN_SPEC.md  V3_GATE_A_BLINDED_ANALYSIS_PLAN.md  V3_GATE_A_FORMAT_DIAGNOSTIC_REPORT.md  V3_GATE_A_POSTHOC_FORMAT_DIAGNOSTIC_PLAN.md  (+17 more)
(+971 files in other folders)
