[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-orchestrator"
version = "0.1.0"
description = "Learning Meta-Orchestrator — Phase 1 MVP (single agent, memory+verification backbone, Decision Engine, bandit learning)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2,<0.7",
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
